--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mime_dart
 description: Mime Types for Dart and Flutter.
 version: 1.0.0
-# homepage: https://github.com/niteshsh4rma/mime_dart
+homepage: https://github.com/niteshsh4rma/mime_dart
 
 environment:
   sdk: '>=2.17.1 <3.0.0'
